src/test/ui/parser/foreign-const-semantic-fail.stderr
error: extern items cannot be `const`
  --> $DIR/foreign-const-semantic-fail.rs:4:11
   |
LL |     const A: isize;
   |     ------^
   |     |
   |     help: try using a static value: `static`
   |
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html

error: extern items cannot be `const`
  --> $DIR/foreign-const-semantic-fail.rs:6:11
   |
LL |     const B: isize = 42;
   |     ------^
   |     |
   |     help: try using a static value: `static`
   |
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html

error: aborting due to 2 previous errors

